--- a/app/globals.css
+++ b/app/globals.css
@@ -320,3 +320,13 @@ body {
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+@media print {
+  html, body {
+    display: hidden;
+  }
+  body {
+    background: black !important;
+    color: black !important;
+  }
+}
